1.4.0
Complete rewrite, split into RLMixins and FermiumMixins, new logo by StarArtsy, relicense